--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,15 +1,15 @@
 {
   "home": {
     "title": "CDUC Portal",
-    "description": "(Capacity, Performance, Usage, and Cost)",
-    "details": "Portal aiming to consolidate all views, dashboards, reports, and access to modules and information developed by CESTI65 along with CAIXA's Capacity teams.",
+    "description": "Portal aiming to consolidate all views, dashboards, reports, and access to modules and information developed by CESTI65 along with CAIXA's Capacity teams.",
     "about":"About",
     "settings":"Settings",
     "darkmode":"Dark Mode",
     "noItemFound": "No Item Found",
     "language":"Language",
     "search": "Search",
-    "update": "Update Frequency: "
+    "update": "Update Frequency: ",
+    "exit": "Exit"
   },
   "time":{
     "years": "Yearly",
