bug fixes and content display improvement

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
     "language":"Language",
     "search": "Search",
     "update": "Update Frequency: ",
-    "exit": "Exit"
+    "close": "Close"
   },
   "time":{
     "years": "Yearly",
