--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -9,7 +9,7 @@
     "language":"Idioma",
     "search": "Pesquisar",
     "update": "Frequência de atualização: ",
-    "exit": "Sair"
+    "close": "Fechar"
   },
   "time":{
     "years": "Anual",
